# async_closure

./: Cargo.toml  README.md
.github/workflows/: ci.yml  run.sh
examples/: capture_lifetimes.rs  capture_lifetimes_mut.rs  capture_no_lifetimes_mut.rs  no_fields_or_args.rs  urlo.rs
examples/urlo/: Cargo.toml
examples/urlo/examples/: capture_lifetimes.rs  no_fields_or_args.rs
examples/urlo/src/: case1.rs  case2.rs  case3.rs  case4.rs  case5.rs  main.rs
src/: capture_lifetime.rs  capture_lifetimes.rs  capture_no_lifetime.rs  capture_no_lifetimes.rs  lib.rs
src/doc/: macro_syntax.md
src/doc/macro/: lifetimes_details.md  lifetimes_examples_fn.md  lifetimes_examples_mut.md  lifetimes_examples_once.md  no_lifetimes_examples_fn.md  no_lifetimes_examples_mut.md  no_lifetimes_examples_once.md
src/doc/trait/: lifetimes_fn.md  lifetimes_fnmut.md  lifetimes_fnonce.md  no_lifetimes_fn.md  no_lifetimes_fnmut.md  no_lifetimes_fnonce.md
tests/: async_callback.rs  fn_.rs  fn_2.rs  fn_mut.rs  fn_mut2.rs  fn_once.rs  fn_once2.rs  new_fn_once.rs
